fix: removed letter spacing in the end

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -29,7 +29,3 @@ $line-height-root: 1.75;
 .img {
   border-radius: 8px;
 }
-
-.letter-spacing {
-  letter-spacing: .25rem;
-}
